--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | dandrade</title>
+<title>404 Page not found | dandrade.dev</title>
 
 <meta name="keywords" content="" />
 <meta name="description" content="">
@@ -60,7 +60,7 @@ if (!doNotTrack) {
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://www.dandrade.dev/" accesskey="h">dandrade</a>
+            <a href="https://www.dandrade.dev/" accesskey="h">dandrade.dev</a>
             <span class="logo-switches">
                 
             </span>
@@ -73,7 +73,7 @@ if (!doNotTrack) {
 <div class="not-found">404</div>
 
     </main><footer class="footer">
-    <span>&copy; 2020 <a href="https://www.dandrade.dev/">dandrade</a></span>
+    <span>&copy; 2020 <a href="https://www.dandrade.dev/">dandrade.dev</a></span>
     <span>&middot;</span>
     <span>Powered by <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a></span>
     <span>&middot;</span>
