--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ if (!doNotTrack) {
             <a class="button" href="/xmas-letters/2020" rel="noopener" title="Xmas 2020">
                 <span class="button-inner">XMAS 2020</span>
             </a>
+            <a class="button" href="/xmas-letters/2021" rel="noopener" title="Xmas 2021">
+                <span class="button-inner">XMAS 2021</span>
+            </a>
         </div>
     </div>
 </div>
