7b630260aa7da4c1c1d2ba3263b98b85aeea10a6

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ if (!doNotTrack) {
             <a class="button" href="/xmas-letters/2021" rel="noopener" title="Xmas 2021">
                 <span class="button-inner">XMAS 2021</span>
             </a>
+            <a class="button" href="/xmas-letters/2022" rel="noopener" title="Xmas 2022">
+                <span class="button-inner">XMAS 2022</span>
+            </a>
         </div>
     </div>
 </div>
