--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@ if (!doNotTrack) {
             <a class="button" href="/xmas-letters/2022" rel="noopener" title="Xmas 2022">
                 <span class="button-inner">XMAS 2022</span>
             </a>
+            <a class="button" href="/xmas-letters/2023" rel="noopener" title="Xmas 2023">
+                <span class="button-inner">XMAS 2023</span>
+            </a>
         </div>
     </div>
 </div>
